--- a/style.css
+++ b/style.css
@@ -18,8 +18,6 @@ h3
 {
     font-size: 1.0rem;
     font-weight: bold;
-    margin: 0px;
-    padding: auto;
 }
 a{
     text-decoration: none;
@@ -34,48 +32,88 @@ nav .visitation {
 
 }
 #older {
-   border: 3px #f2f2f2 solid ;
-   border-radius: 30px 30px;
-   width: 280px;
-   text-align: center;
+    display: flex;
+    border: 3px #f2f2f2 solid;
+    border-radius: 30px 30px;
+    width: 596px;
+    height: 30px;
+    text-align: center;
+    justify-content: space-between;
+    margin: 20px;
 }
-button {
+#older input {
+    
+    width: 276px; ;
+    height: 30px;
+    border: #f2f2f2;
+    font-weight: bold;
+   
+}
+#older button {
     background-color: #0065fc;
+    border-radius: 0px 30px 30px 0px;
+    height: 31px;
+    width: 220px;
+    border: #f2f2f2;
+    
+}
+#older label {
+    width: 100px;
+    height: 30px;
+    display: inline-block;
+    border: #f2f2f2;
+    text-align: center;
+    background-color: #f2f2f2;
+}
+#older label .fas fa-map-marker-alt {
+    height: 20px;
+    width: 16px;
 }
 .filter {
     display: flex;
     justify-content: space-around;
 }
+.filter h2 {
+    margin-left: 10px;
+}
 .filter span {
-    border:3px whitesmoke solid;
+    border:3px #f2f2f2 solid;
     border-radius: 30px 30px 30px 30px;
     display: flex;
-    justify-content:center ;
-    padding: 20px;
+    text-align: start;
+    padding: 10px;
+    margin: 20px 10px;
+}
+.filter #money, #child, #love, #dog {
+    color: #0065fc; 
+    width: 40px;
+    height: 40px;
+    padding-right:0px;
+    border-radius: 50%;
+    background-color: #deebff;
+    margin-right: 10px;
+    text-align: center;
 }
 .une {
-    border: 2px violet solid;
     margin: 10px;
 }
 .visitation ul {
     display: flex;
-    flex-direction: end;
-    justify-content: space-around;
-    margin: 70px 50px 20px 80px;
-    margin-left: 20px;
-    padding-right: 10px
+    justify-content: end;
+    margin: 10px 10px;
+    width: 1200px;
 }
 li {
    
     list-style-type: none;
     font-size: 0.9rem;
     display: flex;
-   
+   margin: 20px 20px;
+   padding: 10px 10px;
 }
  .club {
     display: flex;
     justify-content: space-around ;
-    border: 3px  black solid;
     padding: auto;
     margin: 10px;
  }
@@ -94,9 +132,22 @@ li {
     justify-content: start;
     width: 760px;
 }
-.town .rooms p, h3, #stars {
-    margin: 0px;
-    padding: auto;
+.town .rooms article p {
+    margin: 0px 10px;
+    padding:0px;
+} 
+.rooms h3 {
+    margin: 0px 10px;
+    padding: 0px;
+}
+.rooms #stars {
+    margin: 0px 10px;
+    padding: 0px;
+    color: #0065fc;
+}
+.club .town #sentanse p {
+    margin:30px;
+    padding:20px;
 }
 .popular img {
     display: flex;
@@ -120,7 +171,8 @@ li {
 }
 .morning #stars {
   margin-top: 30px;
-  padding: 20px;  
+  padding: 20px; 
+  color: #0065fc; 
 }
 #more {
     display: flex;
@@ -133,7 +185,7 @@ li {
     display: flex;
     margin: 20px;
     padding: 10px;
-    box-shadow: 8px 8px 8px #f2f2f2bd;
+    box-shadow: 3px #f2f2f2bd;
 }
 .popular h2 {
 margin-left: 20px;
@@ -144,8 +196,7 @@ article {
     background-color: white;
     border-radius: 20px 20px;
     justify-content: space-around;
-    padding: auto;
-    margin: 10px;
+    margin: 20px;
 }
 .town { 
     background-color: #f2f2f2;
@@ -160,7 +211,8 @@ article {
     background-color: white;
     border-radius: 20px 20px;
     border:1px #f2f2f2 solid;
-    box-shadow: ;
+    box-shadow: 5px ;
+    margin: 20px;
 }
 .parc img, .vieux img {
     height: 300px;
@@ -169,14 +221,15 @@ article {
 .dame img, .pomègue img {
     height: 100px;
 }
-.dame,.pomègue {
-
-}
 .activités {
     display: flex;
     justify-content: space-around;
     padding: 10px;
     margin: 10px;
+}
+.marsaillais {
+    margin-top: 20px;
+    padding-top: 20px;
 }
 footer {
     display: flex;
@@ -188,16 +241,14 @@ footer {
     display: flex;
     flex-direction: column;
 }
-#stars, #money, #child, #love, #dog {
-    color: #0065fc; 
-}
+
 .circle-info {
-    display: inline-block;
-    border:1px solid #f2f2f2;
+display: inline-block;
+border: 1px solid #f2f2f2;
 width: 30px;
-line-height: 30px;
+height: 30px;
+border-radius: 50%;
 text-align: center;
-border-radius: 100%;
 }
  
     
