--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ nav .visitation {
     border-radius: 30px 30px;
     text-align: center;
     margin: 20px 0px;
-    padding: 0px 10px 10px 30px;
+    padding: 0px 10px 20px 30px;
 }
 #older input {
     border: #f2f2f2;
@@ -48,7 +48,7 @@ nav .visitation {
     background-color: #0065fc;
     border-radius: 0px 30px 30px 0px;
     border: #f2f2f2;
-    
+    color: white;
 }
 #older label {
     display: flex;
