--- a/style.css
+++ b/style.css
@@ -28,6 +28,10 @@ nav .visitation {
     display: flex;
     padding-left: 20px;
     margin: 10px;
+    justify-content: space-between;
+}
+nav li:last-child a {
+    color:#0065fc;
 }
 nav li a {
     color:black;
@@ -75,8 +79,15 @@ nav li {
     background-color: #f2f2f2;
     border-radius: 30px 0px 0px 30px;
 }
+#older .serch {
+    display: flex;
+}
+#older button:first-of-type {
+    display:none ;
+}
 .filter {
     display: flex;
+    flex-wrap: wrap;
     margin-left: 20px;
 }
 .filter p {
@@ -93,12 +104,16 @@ nav li {
     margin-top: 30px;
     padding-left: 30px;
 }
-.bill, .wave, .hear, .knee {
+.bill {
     display: flex;
     border: 3px #f2f2f2 solid;
     border-radius: 30px 30px 30px 30px;
     align-items: center;
     margin: 0px 20px;
+}
+.bill:hover {
+    background-color: #b5e0f1;
+    color:white;
 }
 .circle-info {
     display:flex;
@@ -141,7 +156,6 @@ padding-left: 0px;
     display: flex;
     justify-content: end;
     margin: 0px 10px;
-    width: 1200px;
 }
 li {
     list-style-type: none;
@@ -336,10 +350,90 @@ footer {
 footer li {
     padding: 10px 0px ;
 }
-.feet, .fast, .foot {
-    display: flex;
-    flex-direction: column;
+
+
+@media screen and (max-width: 700px) {
+    body {
+    background-color: rgb(226, 142, 142);
+    margin: auto;
+    }
+    #older button:first-of-type {
+       padding: 0px; 
+       border-radius: 10px;
+    }
+    #older .serch:last-child {
+        display: none;
+    }
+    section, .town, footer {
+        flex-direction: column;
+        width: 100%;
+    }
+    article {
+        margin: auto;
+        padding: 0px;
+    }
+    nav ul {
+        display: none;
+    }
+    .filter {
+        
+    }
+    .bill {
+		margin: 10px 10px;
+	}
+     .one {
+        margin:auto;
+        padding: 0px;
+    }
+    .club {
+        flex-direction: row-reverse;
+    }
+    .club{
+        
+    }
+    .town {
+        display: block;
+        margin: 0px;
+        padding: 0px;
+    }
+    .town .rooms article {
+        width: 100%;
+    }
+    .popular, .full, .water, .dreams {
+        width: 100%;
+    }
+    .marseillais{
+        margin: auto;
+        padding: 0px;
+    }
+    .activités {
+        display: block;
+        margin: auto;
+        padding: 0px;
+    }
+    .activités img {
+        width: 100%;
+        height: 350px;
+    }
+    .vieux, .pomègue, .parc, .dame {
+        width: 100%;
+    }
+    footer {
+        margin: auto;
+        display: block;
+    }
+	footer a{
+		font-weight: bold;
+		font-size: 1.2rem;
+		color: black;
+	}
+    .fast, .foot, .feet {
+        padding: 5px 30px;
+        margin: 10px 20px;
+        
+    }
 }
+
 
 
  
