--- a/style.css
+++ b/style.css
@@ -44,6 +44,9 @@ nav .link a:hover {
 .mobile {
     display: none;
 }
+.tablet-computer {
+    display: none;
+}
 .link {
     display: flex;
 }
@@ -194,7 +197,7 @@ li {
     flex-wrap: wrap;
     margin: 10px;
 }
-.club .town .rooms article {
+.town .rooms article {
     background-color: white;
     border-radius: 20px 20px;
     box-shadow: 2px 2px 2px 2px rgb(233, 230, 230);
@@ -357,10 +360,11 @@ footer li {
 }
 
 
-@media screen and (max-width: 700px) {
+@media screen and (max-width: 700px)
+ {
     body {
-    margin: auto;
-    padding: 5px;
+    margin: 0px;
+    padding: 0px;
     }
     nav {
         display: none;
@@ -444,12 +448,12 @@ footer li {
     }
     .town .rooms article {
         width: 100%;
-        margin: 10px 0px;
+        margin: 20px 0px;
         padding: 0px;
     }
     .town .rooms {
         margin: 0px;
-        padding: 0px;
+        padding: 20px;
     }
     .more-view p {
         margin: 0px;
@@ -479,14 +483,14 @@ footer li {
     .activités {
         display: block;
         margin: auto;
-        padding:0px;
+        padding:20px;
     }
     .marseillais .activités article {
         margin: 0px;
     }
     .activités img {
         width: 100%;
-        height: 250px;
+        height: 150px;
     }
     .vieux, .pomègue, .parc, .dame {
         padding: 0px;
@@ -507,7 +511,53 @@ footer li {
         margin: 10px 20px;
         
     }
-    
+}
+    /* @media [YYPE][CAR]*/
+    @media  screen and (min-width: 700px) and (max-width: 1024px) 
+ {
+    body {
+        margin: 0px;
+        padding: 0px;
+        background-color: yellow;
+    }
+    .mobile {
+        display: none;
+    }
+
+    .club {
+        display: block;
+       flex-wrap: wrap;
+       flex-direction: row-reverse;
+    }
+   .one .filter {
+       display: flex;
+       margin: 30px;
+   }
+   .club {
+       width: 100%;
+       display: block;
+   }
+    .town .rooms article {
+        margin: 20px 0px;
+        padding: 10px;
+    }
+    .club .rooms {
+        justify-content: space-between;
+    }
+    .club .town {
+        width: 100%;
+        
+    }
+    .popular {
+        width:100%
+    }
+    .people {
+        width: 100%;
+        border-radius: 0px;
+    }
+    .popular .people article {
+       
+    }
 }
 
 
